# buffy

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  buffy.cpp  buffy.h  buffy.pro  buffy.ui  dbus.cpp  dbus.h  foldermodel.cpp  foldermodel.h  folders.cpp  folders.h  folderview.cpp  folderview.h  main.cpp  meson.build  preferences.cpp  preferences.h  preferences.ui  resources.qrc  sorterfilter.cpp  sorterfilter.h  tray.cpp  tray.h
backend/: config-test.cc  config.cc  config.h  from-test.cc  from.cc  mailbox-test.cc  mailbox.cc  mailbox.h  maildir-test.cc  maildir.cc  maildir.h  mailfolder-test.cc  mailfolder.cc  mailfolder.h  meson.build
backend/utils/: string.cc  subprocess.cc  sys.h  term.cc  term.h  tests-main.cc  tests.h
buffy/: config-test.cc  config.cc  config.h  mailfolder-test.cc  mailfolder.cc  mailfolder.h
buffy/config/: config.cc
buffy/mailfolder/: from-test.cc  from.h  mailbox-test.cc  mailbox.cc  mailbox.h  maildir-test.cc  maildir.cc  maildir.h
buffy/utils/: consumer.h  from.cc  from.h  smartpointer.h  string.cc  string.h  subprocess.h  sys.cc  sys.h  system.cc  system.h  testrunner.cc  testrunner.h  tests.cc  tests.h
debian/: changelog  control  copyright  install  menu  rules  vercheck
testdata/: Makefile.am  Makefile.in  enumerate.cc  lib.cc  make-links  test-config.txt
testdata/maildir/test/cur/: 1115653427.21314_1.marvin:2,FS  1115653427.21314_3.marvin:2,S  1115653427.21314_5.marvin:2,S
testdata/mbox/: test.mbox
